Add shortcut to charge and bill

--- a/nuapp-web/public/index.html
+++ b/nuapp-web/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <meta name="keyword" content="" />
-    <title>Nuapp</title>
+    <title>Quente</title>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
